Progress Bar Added Page 1
- Minor changes

--- a/Digg___Progress_bar___1.html
+++ b/Digg___Progress_bar___1.html
@@ -275,6 +275,7 @@
 		left: 291px;
 		top: 764px;
 		transform: matrix(1,0,0,1,0,0);
+		cursor: pointer;
 	}
 	#Next {
 		left: 364px;
@@ -300,6 +301,7 @@
 		stroke-linecap: butt;
 		stroke-miterlimit: 4;
 		shape-rendering: auto;
+		cursor: pointer;
 	}
 	.Path_16 {
 		overflow: visible;
@@ -5501,15 +5503,15 @@ window.application = new Application();
 		<path id="Path_15_cr" d="M 176.199951171875 0 L 290 0 C 313.7482299804688 0 333 16.8340950012207 333 37.60000610351563 C 333 58.36591720581055 313.7482299804688 75.20001220703125 290 75.20001220703125 L 176.199951171875 75.20001220703125 C 152.4517059326172 75.20001220703125 133.199951171875 58.36591720581055 133.199951171875 37.60000610351563 C 133.199951171875 16.8340950012207 152.4517059326172 0 176.199951171875 0 Z">
 		</path>
 	</svg>
-	<div id="Next">
+	<div onClick="window.location='Digg___Progress_bar___1___1.html';" id="Next">
 		<span>Next</span>
 	</div>
 	<svg class="Path_16" viewBox="133.2 0 189.8 75.2">
 		<path id="Path_16" d="M 176.199951171875 0 L 280 0 C 303.7482299804688 0 323 16.8340950012207 323 37.60000610351563 C 323 58.36591720581055 303.7482299804688 75.20001220703125 280 75.20001220703125 L 176.199951171875 75.20001220703125 C 152.4517059326172 75.20001220703125 133.199951171875 58.36591720581055 133.199951171875 37.60000610351563 C 133.199951171875 16.8340950012207 152.4517059326172 0 176.199951171875 0 Z">
 		</path>
 	</svg>
-	<div id="Back">
-		<span>Back</span>
+	<div onclick="location.href='index.html'" id="Back">
+		<span onclick="location.href='index.html'">Back</span>
 	</div>
 	<div id="digg_cv">
 		<span>digg</span>
